# pyhton-core-medvedev-lessons

./: README.md  module_6_2save.txt
module_10_1/: classes.py  composition_&_aggregation.py  constructor__init__.py  encapsul_polymorph_inherit.py  inheritance.py
module_10_2/: custom_exception.py  ex.py  mutated_class_list.py  singleton.py  static_methods.py  super.py  userlist_userdict_userstring.py
module_11_1/: getter_setter.py  iterator.py  public_protected_private.py  str_repr_getitem_setitem.py  str_repr_getitem_setitem_call_with.py
module_11_2/: ex_1.py  ex_2.py
module_12_1/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  ex_5.py  ex_6.py  ex_7.py  ex_8.py  ex_9.py  test.json  test_3.py  test_5.csv  test_6.csv  test_6_2.csv
module_12_2/: ex_1.py
module_1_1/: py.py
module_1_2/: simple_types_of_data.py
module_2_1/: conditional_statement.py  exception.py  for.py  logical_operators.py  main.py  raising_of_exceptions.py  skills_for_work.py  ternar_operation.py  while.py
module_2_2/: game.py  main.py
module_3_1/: docstring.py  enclosed.py  main.py  parameters.py  recursion.py  (+2 more)
module_7_1/my_new_package/: README.md  setup.cfg
module_7_1/my_new_package/src/my_new_package.egg-info/: PKG-INFO  SOURCES.txt
module_7_2/package_crab_123_gg/: README.md  setup.cfg  setup.py
module_7_2/package_crab_123_gg/package_crab_124_gg_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
module_7_2/package_crab_123_gg/src/package_crab_123_gg/: test.py
module_7_2/package_crab_123_gg/src/package_crab_123_gg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+107 files in other folders)
