[project]
name = new_package_20231407131
version = "0.0.1"
authors = [
  { name="Me", email="zgardan19@ukr.net" },]
description = "This is my first test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://github.com/Yevhenii3145/python-core-medvedev-lessons"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
