[project]
name = "package_crab_124_gg_name"
version = "1.0.0"
authors = [
  { name="Me", email="zgardan19@ukr.net" },]
description = "This is my first test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://github.com/Yevhenii3145/python-core-medvedev-lessons"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[options.entry_points]
console_scripts =
    my-application = package_crab_123_gg:hello_world
    another-application = package_crab_123_gg.test:func
